# socratic-learn

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  schema.sql
docs/: a-b-data-flow.md  frontend-api.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  constants.js  main.jsx  styles.css
frontend/src/components/: Ornaments.jsx  ScreenShell.jsx  TopBar.jsx  WeekReportModal.jsx
frontend/src/lib/: api.js  reportDerivation.js  storage.js
frontend/src/views/: AdminLoginView.jsx  CheckpointIntroView.jsx  ConceptCheckpointView.jsx  ContinueCourseView.jsx  CourseCompletionView.jsx  LibraryView.jsx  RoadmapView.jsx  StartView.jsx  StudyView.jsx  TitleView.jsx
socratic_tutor/: cli.py  config.py  db_models.py  evaluator.py  llm_client.py  models.py  pdf_parser.py  pipeline.py  prompts.py  renderer.py  session.py  session_store.py  storage.py  utils.py  web_app.py  web_service.py
tests/: test_cli.py  test_config.py  test_evaluator.py  test_llm_client.py  test_models.py  test_pdf_parser.py  test_pipeline.py  test_prompts.py  test_renderer.py  test_session.py  test_storage.py  test_web_app.py  test_web_service_persistence.py
