[project]
name = "socratic-lecture-tutor"
version = "0.1.0"
description = "CLI MVP for Socratic learning from lecture PDFs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pymupdf4llm>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
socratic-tutor = "socratic_tutor.cli:app"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["socratic_tutor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
