[project]
name = "socratic-lecture-tutor"
version = "0.1.0"
description = "CLI MVP for Socratic learning from lecture PDFs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pymupdf>=1.24.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
socratic-tutor = "socratic_tutor.cli:app"
socratic-tutor-web = "socratic_tutor.web_app:run"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["socratic_tutor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
